Fix whitespace to 2.5% on left/right side on phone-size

--- a/styles/index.css
+++ b/styles/index.css
@@ -65,9 +65,9 @@ footer {
 }
 @media only screen and (max-width: 850px) {
   section {
-    width: 100%;
-    margin-left: 0%;
-    margin-right: 0%;
+    width: 95%;
+    margin-left: 2.5%;
+    margin-right: 2.5%;
   }
   section h1 {
     font-size: 7vw;
@@ -102,11 +102,14 @@ footer {
     margin-top: 50px;
   }
   .imgSmallscreen img {
-    width: 100%;
+    width: 95%;
+    margin-left: 2.5%;
+    margin-right: 2.5%;
   }
   .imgSmallscreen figcaption {
     height: 25px;
     margin-left: 2.5%;
+    padding-left: 1vw;
     color: grey;
     font-style: italic;
     font-size: 2.5vw;
